--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "antd": "^4.9.4",
     "bootstrap": "^4.5.3",
     "google-map-react": "^2.1.9",
+    "leaflet": "^1.7.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-google-maps": "^9.4.5",
+    "react-leaflet": "^3.1.0",
     "react-scripts": "4.0.1",
     "recompose": "^0.30.0",
     "web-vitals": "^0.2.4"
